rust/crates/rax/src/string/rules/snapshots/rax__string__rules__until_char__tests__ascii_no_delimiter.snap
---
source: crates/rax/src/string/rules/until_char.rs
expression: result
---
Err(
    RuleError {
        reason: "input is empty or does not contain the expected character.",
    },
)
