rust/crates/rax/src/string/rules/snapshots/rax__string__rules__until_char__tests__empty_input.snap
---
source: crates/rax/src/string/rules/until_char.rs
expression: result
---
Err(
    "delimiter not found",
)
