rust/crates/rax/src/string/rules/snapshots/rax__string__rules__until_char__tests__keep_right.snap
---
source: crates/rax/src/string/rules/until_char.rs
expression: result
---
Ok(
    (
        "abc",
        "-def",
    ),
)
