rust/crates/rax/src/string/rules/snapshots/rax__string__rules__until_char__tests__utf8_empty_input.snap
---
source: crates/rax/src/string/rules/until_char.rs
expression: result
---
Err(
    RuleError {
        reason: "delimiter not found",
    },
)
